force-app/main/default/objects/ProductAttribute/fields/Number_of_Veterinary__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Veterinary__c</fullName>
    <label>Number of Veterinary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>1-3</fullName>
            </value>
            <value>
                <fullName>2-3</fullName>
            </value>
            <value>
                <fullName>4-5</fullName>
            </value>
            <value>
                <fullName>4-9</fullName>
            </value>
            <value>
                <fullName>6-9</fullName>
            </value>
            <value>
                <fullName>10-14</fullName>
            </value>
            <value>
                <fullName>10-29</fullName>
            </value>
            <value>
                <fullName>15+</fullName>
            </value>
            <value>
                <fullName>30+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>