force-app/main/default/objects/ProductAttribute/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Lamination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laminated</fullName>
            </value>
            <value>
                <fullName>Non-Laminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>